[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "show-off"
version = "1.0.1"
description = "CLI tool to generate beautiful standalone HTML presentations from Markdown."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "reharish", email = "58879939+reharish@users.noreply.github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Presentation"
]
dependencies = [
    "PyYAML>=6.0"
]

[project.urls]
"Homepage" = "https://github.com/reharish/show-off"
"Bug Tracker" = "https://github.com/reharish/show-off/issues"

[project.scripts]
show-off = "show_off.cli:main"

[tool.setuptools]
packages = ["show_off"]

[tool.setuptools.package-data]
show_off = [
    "dist/**/*.css",
    "dist/**/*.js",
    "dist/**/*.html",
    "plugin/**/*.css",
    "plugin/**/*.js"
]
